--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -40,4 +40,19 @@
         text-transform: uppercase;
         color: #fff;
     }
+    &-enter {
+        opacity: 0;
+    }
+    &-enter-active {
+        opacity: 1;
+        transition: all 300ms ease-in;
+        }
+    &-exit {
+        opacity: 1;
+    }
+    &-exit-active {
+        opacity: 0;
+        transition: all 300ms ease-in;
+    }
 }
+
